--- a/package.json
+++ b/package.json
@@ -24,11 +24,10 @@
   "engines": {
     "node": ">= 0.6.0"
   },
-  "scripts": {
-  },
-  "dependencies": {
-  },
+  "scripts": {},
+  "dependencies": {},
   "devDependencies": {
+    "mocha": "~1.9.0"
   },
   "keywords": [
     "bdd",
